# personal_llm

./: .gitignore  README.md  config.toml  debug_chat_reference.html  docker-compose.yml  main.py  new_design.html  render.yaml  requirements.txt  start.sh  styles.css
.streamlit/: config.toml  pages.toml
backend/: .dockerignore  .env.example  Dockerfile  offline_edit.ipynb  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  dependencies.py  firebase.py  main.py  runtime_settings.py
backend/app/data/: SPC_selected_personas.xlsx  curated_twitter_accounts.pkl  curated_twitter_accounts_with_categories_and_ids.xlsx  popular_accounts_manually_validated_with_sv.xlsx  questionnaire.csv
backend/app/models/: __init__.py  chat.py  feedback.py  profile.py
backend/app/routers/: admin.py  chat.py  debug.py  feedback.py  profile.py  sessions.py
backend/app/services/: chat_service.py  feedback_service.py  intent_service.py  persona_service.py  profile_service.py  prompt_service.py  session_service.py
backend/app/templates/: base_message.txt  base_message2.txt  base_message3.txt
backend/tests/: __init__.py  conftest.py
backend/tests/unit/: test_admin_router.py  test_chat_router.py  test_chat_service.py  test_feedback_service.py  test_intent_service.py  test_persona_service.py  test_prompt_service.py  test_session_service.py
data/: PERSONA_selected_personas.xlsx  dbpedia_types.csv  persona_details_v2.pkl  popular_accounts_manually_validated_with_sv.xlsx  questionnaire.csv
data_preperation/: twitter_user_ids.ipynb
frontend/: .dockerignore  (+5 more)
(+51 files in other folders)
