[project]
name = "personal-llm-backend"
version = "0.1.0"
description = "Personal LLM Research Platform – Backend API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "langchain>=0.3.21",
    "langchain-openai>=0.3.9",
    "langchain-community>=0.3.20",
    "langchain-core>=0.3.65",
    "openai>=1.50.0",
    "dspy>=2.5.0",
    "firebase-admin>=6.5.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "scikit-learn>=1.5.0",
    "socialvec",
    "openpyxl>=3.1.0",
    "python-multipart>=0.0.9",
    "sse-starlette>=2.1.0",
    "toml>=0.10.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 120
